tests/anp_test_4_with_priority_chang_pass_to_banp/core_priority_field.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: priority-50-example
spec:
  priority: 50
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "deny-all-ingress-from-slytherin"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "deny-all-egress-to-slytherin"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: old-priority-60-new-priority-40-example
spec:
  priority: 40 
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "pass-all-ingress-from-slytherin"
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "pass-all-egress-to-slytherin"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "allow-all-ingress-from-slytherin"
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "allow-all-egress-to-slytherin"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
